# integra

./: .cursorrules  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: documentation_agent_example.py
integra/: __init__.py  models.py  search_tools.py
integra/agents/: __init__.py  documentation_agent.py  evaluation_agent.py  search_agent.py
integra/models/: __init__.py  project.py  solution.py
